fix: add fts5 tag to go test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           cache: true
 
       - name: Run tests
-        run: go test -v -race ./...
+        run: go test -tags "fts5" -v -race ./...
 
   build:
     name: Build ${{ matrix.service }}
