--- a/charts/kubelogs/charts/server/values.yaml
+++ b/charts/kubelogs/charts/server/values.yaml
@@ -9,6 +9,22 @@ image:
 service:
   type: ClusterIP
   port: 50051
+  http:
+    enabled: true
+    port: 8080
+
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+  hosts:
+    - host: kubelogs.local
+      paths:
+        - path: /
+          pathType: Prefix
+  tls:
+    enabled: false
+    certResolver: ""
 
 persistence:
   enabled: true
@@ -21,6 +37,8 @@ persistence:
 env:
   listenAddr: ":50051"
   dbPath: "/data/kubelogs.db"
+  httpEnabled: true
+  httpAddr: ":8080"
 
 resources:
   requests:
