--- a/charts/kubelogs/values.yaml
+++ b/charts/kubelogs/values.yaml
@@ -21,6 +21,22 @@ server:
   service:
     type: ClusterIP
     port: 50051
+    http:
+      enabled: true
+      port: 8080
+
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+    hosts:
+      - host: kubelogs.local
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      enabled: false
+      certResolver: ""
 
   persistence:
     enabled: true
@@ -33,6 +49,8 @@ server:
   env:
     listenAddr: ":50051"
     dbPath: "/data/kubelogs.db"
+    httpEnabled: true
+    httpAddr: ":8080"
 
   resources:
     requests:
